Added variable css.

--- a/style.css
+++ b/style.css
@@ -8,9 +8,131 @@ body {
   box-sizing: border-box;
 }
 
+:root {
+  --body-bg: #1e1e1e;
+  --body-color: #e1e1e1;
+  --card-bg: #3d3d3d;
+  --fire: #e4604d;
+  --grass: #9dd465;
+  --electric: #f9e45f;
+  --water: #6a83d6;
+  --ground: #e4c967;
+  --rock: #cabb7b;
+  --fairy: #eeb2fa;
+  --poison: #9f619d;
+  --bug: #c5cf4a;
+  --dragon: #857af7;
+  --psychic: #e56eaf;
+  --flying: #80a4f9;
+  --fighting: #9b5a48;
+  --normal: #bab8ab;
+}
+
+.bg-fire {
+  background: linear-gradient(to top right, var(--fire), var(--card-bg) 25%);
+}
+.fire {
+  background-color: #fddfdf;
+}
+
+.bg-grass {
+  background: linear-gradient(to top right, var(--grass), var(--card-bg) 25%);
+}
+.grass {
+  background-color: #defde0;
+}
+
+.bg-eletric {
+  background: linear-gradient(to top right, var(--eletric), var(--card-bg) 25%);
+}
+.eletric {
+  background-color: #fcf7de;
+}
+
+.bg-water {
+  background: linear-gradient(to top right, var(--water), var(--card-bg) 25%);
+}
+.water {
+  background-color: #def3fd;
+}
+
+.bg-ground {
+  background: linear-gradient(to top right, var(--ground), var(--card-bg) 25%);
+}
+.ground {
+  background-color: #fde7da;
+}
+
+.bg-rock {
+  background: linear-gradient(to top right, var(--rock), var(--card-bg) 25%);
+}
+.rock {
+  background-color: #d5d5d4;
+}
+
+.bg-fairy {
+  background: linear-gradient(to top right, var(--fairy), var(--card-bg) 25%);
+}
+.fairy {
+  background-color: #fceaff;
+}
+
+.bg-poison {
+  background: linear-gradient(to top right, var(--poison), var(--card-bg) 25%);
+}
+.poison {
+  background-color: #98d7a5;
+}
+
+.bg-bug {
+  background: linear-gradient(to top right, var(--bug), var(--card-bg) 25%);
+}
+.bug {
+  background-color: #f8d5a3;
+}
+
+.bg-dragon {
+  background: linear-gradient(to top right, var(--dragon), var(--card-bg) 25%);
+}
+.dragon {
+  background-color: #97b3e6;
+}
+
+.bg-psychic {
+  background: linear-gradient(to top right, var(--psychic), var(--card-bg) 25%);
+}
+.psychic {
+  background-color: #eaeda1;
+}
+
+.bg-flying {
+  background: linear-gradient(to top right, var(--flying), var(--card-bg) 25%);
+}
+.flying {
+  background-color: #f5f5f5;
+}
+
+.bg-fighting {
+  background: linear-gradient(
+    to top right,
+    var(--fighting),
+    var(--card-bg) 25%
+  );
+}
+.fighting {
+  background-color: #e6e0d4;
+}
+
+.bg-normal {
+  background: linear-gradient(to top right, var(--normal), var(--card-bg) 25%);
+}
+.normal {
+  background-color: #f5f5f5;
+}
+
 body {
-  background-color: #1e1e1e;
-  color: #e1e1e1;
+  background-color: var(--body-bg);
+  color: var(--body-bg);
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
@@ -37,6 +159,10 @@ body {
   border-radius: 10px;
 }
 
+.card:hover {
+  cursor: pointer;
+}
+
 .card .title h2 {
   padding: 0;
   margin: 0;
@@ -48,7 +174,13 @@ body {
   width: 220px;
   height: 220px;
   border-radius: 50%;
-  background-color: #9dd465;
+  background-size: 400% 400%;
+  background-position: 0 0;
+  animation: bg-out 300ms ease-in forwards 1;
+}
+
+.card:hover .img {
+  animation: bg-in 300ms ease-in forwards 1;
 }
 
 .card .img img {
@@ -56,13 +188,12 @@ body {
 }
 
 .card .type {
-  color: #1e1e1e;
+  color: varvar(--body-bg);
   border-radius: 10px;
   padding: 10px;
   text-transform: uppercase;
   font-weight: bolder;
   letter-spacing: 4px;
-  background-color: #9dd465;
 }
 
 .card .favorite {
@@ -76,7 +207,25 @@ body {
 }
 
 @media screen and (max-width: 768px) {
-    .card {
-        width: calc(100% - 20px);
-      }
+  .card {
+    width: calc(100% - 20px);
+  }
+}
+
+@keyframes bg-in {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 0% 100%;
+  }
+}
+
+@keyframes bg-out {
+  0% {
+    background-position: 0% 100%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
